gave up and used postbin.

--- a/spoilers.html
+++ b/spoilers.html
@@ -7,7 +7,7 @@
 	<h1>No Really Jonah...</h1>
 	<p>Okay, so my bullshit doesn't do it for you and you really want to know what Stay is about and you don't want to just watch blindly. Just fill out the form below and a check will be in the mail within 7-10 business days.</p>
 
-	<form method="post" action="fail.html">
+	<form method="post" action="https://httpbin.org/post">
 		<fieldset>
 			<div>
 				<label>Name:</label>
