updated for error

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<p>I'm the kind of spoiler-phobic person who preffers not to even watch previews before I watch a film - too often the entire story is summarized in what is supposed to be a sneak peak. However, with the movie Stay it is absolutely <strong>NECISSARY</strong> to go in blind, knowing little or nothing about what the story is, and what is supposed to be happening. I so enjoyed this movie because it's surrealism left me just slightly suspicious something strange was going on, and I spent the entire movie trying to figure out what was going on. </p>
 	<p>What is Stay about? Stay is about figuring out what Stay is about. And I love it for that.</p>
 
-	<a href="spoilers.html">But really... I want to know what this movie is about.</a> <br>
-	<img src="images/ryan_bridge.jpg">
+	<a href="/spoilers.html">But really... I want to know what this movie is about.</a> <br>
+	<img src="images/ryan_bridge.jpg" alt="Ryan Gosling on the Brooklyn Bridge">
 <br>
 <br>
 <br>
