--- a/spoilers.html
+++ b/spoilers.html
@@ -36,6 +36,6 @@
 
 	<a href="index.html">Return Home</a> <br>
 
-	<img src="images/ewan_naomi.jpg">
+	<img src="images/ewan_naomi.jpg" alt="On set on Stay (2005)">
 </body>
 </html>
