Added style.css, and spoiles.css

--- a/index.html
+++ b/index.html
@@ -5,34 +5,46 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1>What is Stay (2005) about?</h1>
-	<p>Exactly.</p>
-	<p><em>What?</em> I'm hearing you say, but I mean it. That's EXACTLY what the movie is about.</p>
-	<p>I'm the kind of spoiler-phobic person who preffers not to even watch previews before I watch a film - too often the entire story is summarized in what is supposed to be a sneak peak. However, with the movie Stay it is absolutely <strong>NECISSARY</strong> to go in blind, knowing little or nothing about what the story is, and what is supposed to be happening. I so enjoyed this movie because it's surrealism left me just slightly suspicious something strange was going on, and I spent the entire movie trying to figure out what was going on. </p>
-	<p>What is Stay about? Stay is about figuring out what Stay is about. And I love it for that.</p>
+	<main>
+		<article>
+			<header>
+				<img src="images/gosling-backlit.jpg" alt="Ryan Gosling on the Brooklyn Bridge">
+				<h1>What is Stay (2005) about?</h1>
+			</header>
+			
+			<div class="article-content">
 
-	<a href="/spoilers.html">But really... I want to know what this movie is about.</a> <br>
-	<img src="images/ryan_bridge.jpg" alt="Ryan Gosling on the Brooklyn Bridge">
-<br>
-<br>
-<br>
-	<table border=".5">
-		<tr>
-			<th>Actor</th>
-			<th>Character</th>
-		</tr>
-		<tr>
-			<td>Ewan McGregor</td>
-			<td>Sam Foster</td>
-		</tr>
-		<tr>
-			<td>Ryan Gosling</td>
-			<td>Henry Letham</td>
-		</tr>
-		<tr>
-			<td>Naomi Watts</td>
-			<td>Lila Culpepepper</td>
-		</tr>
-	</table>
+				<p>Exactly.</p>
+				<p><em>What?</em> I'm hearing you say, but I mean it. That's EXACTLY what the movie is about.</p>
+				<p>I'm the kind of spoiler-phobic person who preffers not to even watch previews before I watch a film - too often the entire story is summarized in what is supposed to be a sneak peak. However, with the movie Stay it is absolutely <strong>NECISSARY</strong> to go in blind, knowing little or nothing about what the story is, and what is supposed to be happening. I so enjoyed this movie because it's surrealism left me just slightly suspicious something strange was going on, and I spent the entire movie trying to figure out what was going on. </p>
+				<p>What is Stay about? Stay is about figuring out what Stay is about. And I love it for that.</p>
+
+				<div class="flowy">
+					<a href="/spoilers.html" class="featured-button"><strong>But really...</strong> <br> I want to know what this movie is about.</a><br>
+					<table class="table">
+						<tr class="centered-cells">
+							<th>Actor</th>
+							<th>Character</th>
+						</tr>
+						<tr>
+							<td>Ewan McGregor</td>
+							<td>Sam Foster</td>
+						</tr>
+						<tr>
+							<td>Ryan Gosling</td>
+							<td>Henry Letham</td>
+						</tr>
+						<tr>
+							<td>Naomi Watts</td>
+							<td>Lila Culpepepper</td>
+						</tr>
+					</table>
+			</div> <!-- .flowy -->
+			</div><!-- /.article-content -->
+		</article>
+		<footer>
+			Thank you for visiting and learning about Stay. You're going to watch it now, right?
+		</footer>
+	</main>
 </body>
 </html>
