--- a/spoilers.html
+++ b/spoilers.html
@@ -2,40 +2,45 @@
 <html>
 <head>
 	<title>Spoilers | Stay (2005)</title>
+	<link rel="stylesheet" href="styles.css" media="screen" title="no title">
+	<link rel="stylesheet" href="spoilers.css" media="screen" title="no title">
 </head>
 <body>
-	<h1>No Really Jonah...</h1>
-	<p>Okay, so my bullshit doesn't do it for you and you really want to know what Stay is about and you don't want to just watch blindly. Just fill out the form below and a check will be in the mail within 7-10 business days.</p>
+	<div class="lightbox">
+		<h1>No Really Jonah...</h1>
+		<p>Okay, so my bullshit doesn't do it for you and you really want to know what Stay is about and you don't want to just watch blindly. Just fill out the form below and a check will be in the mail within 7-10 business days.</p>
 
-	<form method="post" action="https://httpbin.org/post">
-		<fieldset>
-			<div>
-				<label>Name:</label>
-				<input type="text" name="name">
-			</div>
-			<div>
-				<label>Email:</label>
-				<input type="email" name="email">
-			</div><br>
-			<div>
-				<label>How spoiled?</label>
-				<select name="How spoiled">
-					<option value="One">A Proper Teaser</option>
-					<option value="Two">A Full Plot Synopsis</option>
-					<option value="Three">The Movie Script</option>
-				</select>
-			</div>
-			<div>
-				<input type="checkbox" name="confirm crazy" value="agree"> I hate art and want to ruin this movie for myself.
-			</div>
-			<div>
-				<button type="submit">I'm Awful</button>
-			</div>
-		</fieldset>
-	</form>
+		<form method="post" action="https://httpbin.org/post">
+			<fieldset id="formation">
+				<div class="form-elemnts">
+					<label class="label-1">Name:</label>
+					<input type="text" name="name">
+				</div>
 
-	<a href="index.html">Return Home</a> <br>
+				<div class="form-elemnts">
+					<label class="label-1">Email:</label>
+					<input type="email" name="email">
+				</div>
 
-	<img src="images/ewan_naomi.jpg" alt="On set on Stay (2005)">
+				<div class="form-elemnts">
+					<label>How spoiled?</label>
+					<select name="How spoiled">
+						<option value="One">A Proper Teaser</option>
+						<option value="Two">A Full Plot Synopsis</option>
+						<option value="Three">The Movie Script</option>
+					</select>
+				</div>
+				<div class="form-elemnts">
+					<input type="checkbox" name="confirm crazy" value="agree"> I hate art and want to ruin this movie for myself.
+				</div>
+				<div class="form-elemnts">
+					<button type="submit">I'm Awful</button>
+				</div>
+			</fieldset>
+		</form>
+			</div>
+		<footer>
+			<a href="index.html">Return Home</a> <br>
+		</footer>
 </body>
 </html>
